--- a/src/tree/src/style/tree.css
+++ b/src/tree/src/style/tree.css
@@ -138,3 +138,8 @@
   background-color: #f0f7ff;
 }
 
+/* 折叠过渡动画 */
+.collapse-transition {
+  transition: 0.3s height ease-in-out, 0.3s padding-top ease-in-out, 0.3s padding-bottom ease-in-out;
+}
+
